fixed alignment of features

--- a/css/main.css
+++ b/css/main.css
@@ -466,7 +466,6 @@ footer p {
     }
 
     .features .features-items{
-      width: 83%; 
       display: flex;
       justify-content: center;
       align-items: center;
@@ -558,7 +557,7 @@ footer p {
 
       /* Features */
       .features h2 {
-        width: 80%;
+        width: 100%;
     }
  
     .features article {
